[package]
name = "hula_passthrough"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
homepage = "https://github.com/hulks/hulk"

[dependencies]
env_logger = "0.10.0"
clap = { version = "4.0.29", features = ["derive"] }
log = "0.4.17"
epoll = "4.3.1"
systemd = "0.10.0"
color-eyre = "0.6.2"


