[package]
name = "lollipop"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
homepage = "https://github.com/hulks/hulk"

[dependencies]
env_logger = "0.10.0"
clap = { version = "4.0.29", features = ["derive"] }
log = { workspace = true }
color-eyre = { workspace = true }
hula-types = { workspace = true }
rmp-serde = "1.1.1"
polars = { version = "0.35.4", features = ["lazy"]}
serde_json = { workspace = true }
flatten-json-object = "0.6.1"
csv = "1.3.0"
