[package]
name = "lollipop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
env_logger = "0.10.0"
clap = { version = "4.0.29", features = ["derive"] }
log = { workspace = true }
color-eyre = { workspace = true }
hula-types = { workspace = true }
rmp-serde = "1.1.1"
polars = { version = "0.35.4", features = ["lazy"]}
serde_json = { workspace = true }
flatten-json-object = "0.6.1"
csv = "1.3.0"
types = { workspace = true }
hulk_nao = { path = "../../crates/hulk_nao" }
