[package]
name = "lollipop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
color-eyre = { workspace = true }
csv = "1.3.0"
env_logger = "0.10.0"
flatten-json-object = "0.6.1"
hula-types = { workspace = true }
log = { workspace = true }
polars = { version = "0.35.4", features = ["lazy"]}
rmp-serde = "1.1.1"
serde_json = { workspace = true }
types = { workspace = true }
nalgebra = { workspace = true }
kinematics = { workspace = true }
ncollide2d = "0.33"
